--- a/Master/Website/Website/views/speech.ejs
+++ b/Master/Website/Website/views/speech.ejs
@@ -72,7 +72,6 @@
           
 <div class="row col-xl-12"><input placeholder="Placeholder" type="text" id="inputPlaceholderEx" class="form-control col-xl-9 col-sm-6"><button id ="clicker" type="button" class="btn btn-dark col-xl-2 col-sm-3">Send</button>
 </div>
-
           
         </ol>
 
@@ -87,42 +86,6 @@
           
         </ol>
 
-        <!-- Icon Cards-->
-        <div class="row">
-          <div class="col-xl-4 col-sm-6 mb-3">
-            <div class="card text-white bg-primary o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-comments"></i>
-                </div>
-				<div class="mr-5">Most Favourited: </div>
-                
-				<div class="mr-5" id = "Most-Retweeted"></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-list"></i>
-                </div>
-                <div class="mr-5">Most Retweeted: </div>
-				<div id = "Most-Favourited" class="mr-5"></div>
-              </div>
-
-            </div>
-          </div>
-
-          
-        </div>
-
-        <!-- Area Chart Example-->
-        <div class="card mb-3">
-          <div class="card-header">
-            <i class="fas fa-chart-area"></i>Tweets Per Month</div>
-          
-        </div>
 
         <!-- DataTables Example -->
         <div class="card mb-3">
@@ -225,7 +188,7 @@
   <script src="js/demo/datatables-demo.js"></script>
   <script src="js/demo/chart-area-demo.js"></script>
   
-  <script src="js/fusion/fusion.js"></script>
+  <script src="js/fusion/speech.js"></script>
   <script src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
 
 
